Add company details

--- a/mozilla.scss
+++ b/mozilla.scss
@@ -33,11 +33,13 @@ $link-color: $warm-red;
 
 // navbar https://quarto.org/docs/output-formats/html-themes.html#navigation
 $navbar-bg: $white;
-$navbar-fg: $dark-grey;
+$navbar-fg: $black;
 $navbar-hl: $black;
 $sidebar-bg: $white;
 $sidebar-fg: $black;
 $sidebar-hl: $warm-red;
+$footer-bg: $light-grey;
+$footer-fg: $black;
 
 // Base layout
 // https://getbootstrap.com/docs/5.1/components/navbar/#containers
