--- a/mozilla.scss
+++ b/mozilla.scss
@@ -1,7 +1,7 @@
 // Quarto theme based on https://mozilla.design/mozilla/
 
 // Google Fonts
-@import url(https://fonts.googleapis.com/css?family=Zilla+Slab|Zilla+Slab+Highlight|Inter|Fira+Code:400italic,700italic,300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Zilla+Slab|Zilla+Slab+Highlight|Inter|Fira+Code|Lato:400italic,700italic,300,400,700);
 
 /*-- scss:defaults --*/
 // bootstrap variables https://github.com/twbs/bootstrap/blob/main/scss/_variables.scss
